# clockify-api

./: .gitignore  README.md  example.py  pyproject.toml  requirements.txt
.github/workflows/: build.yaml
apimodels/: client.json  project.json  tag.json  task.json  timeentry.json
clockify/: __init__.py  approvals.py  config.py  custom_fields.py  dto.py  expense.py  group.py  invoice.py  mapper.py  project.py  session.py  tag.py  time_entry.py  user.py  workspace.py  wrapper.py
clockify/apis/: client_api.py  project.py  project_api.py  tag_api.py  task_api.py  time_entry_api.py  user.py
clockify/client/: client_dto.py  client_mapper.py  client_wrapper.py
clockify/model/: base_model.py  client_model.py  enums.py  project_model.py  tag_model.py  task_model.py  time_entry_model.py  user_model.py
clockify/user/: user_dto.py  user_mapper.py  user_wrapper.py
clockify/user/membership/: membership_dto.py  membership_mapper.py
clockify/user/settings/: settings_dto.py  settings_mapper.py
clockify/user/settings/summaryreportsettings/: summaryreportsettings_dto.py  summaryreportsettings_mapper.py
docs/: .readthedocs.yaml  conf.py  index.rst  make.bat  requirements.txt
docs/rst/: clockify.rst  modules.rst
docs/rst/apis/: client_api.rst  modules.rst  project_api.rst  tag_api.rst  task_api.rst  time_entry_api.rst
docs/rst/model/: base_model.rst  client_model.rst  model.rst  modules.rst  project_model.rst  tag_model.rst  task_model.rst  time_entry_model.rst  user_model.rst
docs/rst/usage/: quickstart.rst
examples/: quickstart.py
tests/: test.py  test_client.py  test_project.py  test_tag.py  test_task.py  test_time_entry.py  test_user.py
