[tool.poetry]
name = "clockify-api"
version = "0.1.0"
description = "Python wrapper for Clockify's API."
authors = ["Jean-Paul Weijers <jpweijers@users.noreply.github.com>"]
packages = [
  {include = "clockify"}
]

[tool.poetry.dependencies]
python = "^3.8"
bidict = "^0.22.0"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = "^7.1.1"
coverage = "^6.3.2"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
