[tool.poetry]
name = "clockify-api"
version = "0.1.1"
description = "Python wrapper for Clockify's API."
authors = ["Jean-Paul Weijers <jpweijers@users.noreply.github.com>"]
packages = [
  {include = "clockify"}
]
repository="https://github.com/jpweijers/clockify-api"
readme="README.md"
documentation="https://clockify-api.readthedocs.io/"

[tool.poetry.dependencies]
python = "^3.8"
bidict = "^0.22.0"
requests = "^2.27.1"
marshmallow = "^3.15.0"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = "^7.1.1"
coverage = "^6.3.2"
isort = "^5.10.1"
json2python-models = "^0.2.5"
sphinx-rtd-theme = "^1.0.0"
Sphinx = "^4.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
relative_files = true
